--- a/static/templates/aspera_instance.yaml
+++ b/static/templates/aspera_instance.yaml
@@ -18,26 +18,36 @@ Resources:
       UserData: 
           !Base64 | 
             <powershell> 
+              $webClient = New-Object System.Net.WebClient;
+              $FFDloadTask = $webClient.DownloadFileTaskAsync("https://download.mozilla.org/?product=firefox-latest&os=win64&lang=en-US", "C:\Users\Administrator\Desktop\firefox_installer.exe");
+
+              $AdminKey = "HKLM:\SOFTWARE\Microsoft\Active Setup\Installed Components\{A509B1A7-37EF-4b3f-8CFC-4F3A74704073}"; 
+              $UserKey = "HKLM:\SOFTWARE\Microsoft\Active Setup\Installed Components\{A509B1A8-37EF-4b3f-8CFC-4F3A74704073}";
+              $AWSCLIarguments = "/i `"C:\Users\Administrator\Desktop\AWSCLIV2.msi`" /quiet";
+              Set-ItemProperty -Path $AdminKey -Name "IsInstalled" -Value 0; 
+              Set-ItemProperty -Path $UserKey -Name "IsInstalled" -Value 0;
+              Set-MpPreference -DisableRealtimeMonitoring $true;
+
               Invoke-WebRequest -Uri "https://awscli.amazonaws.com/AWSCLIV2.msi" -Outfile C:\AWSCLIV2.msi
               $arguments = "/i `"C:\AWSCLIV2.msi`" /quiet"
               Start-Process msiexec.exe -ArgumentList $arguments -Wait
               $env:Path = [System.Environment]::GetEnvironmentVariable("Path","Machine")
               aws --version
               Invoke-Command aws --version;
-              Set-MpPreference -DisableRealtimeMonitoring $true;
-              Invoke-WebRequest 'https://download.mozilla.org/?product=firefox-latest&os=win64&lang=en-US' -OutFile  "C:\Users\Administrator\Desktop\firefox_installer.exe"; 
-              $AdminKey = "HKLM:\SOFTWARE\Microsoft\Active Setup\Installed Components\{A509B1A7-37EF-4b3f-8CFC-4F3A74704073}"; 
-              $UserKey = "HKLM:\SOFTWARE\Microsoft\Active Setup\Installed Components\{A509B1A8-37EF-4b3f-8CFC-4F3A74704073}"; 
-              Set-ItemProperty -Path $AdminKey -Name "IsInstalled" -Value 0; 
-              Set-ItemProperty -Path $UserKey -Name "IsInstalled" -Value 0;  
+
+              $AsperaDloadTask = $webClient.DownloadFileTaskAsync("https://d3gcli72yxqn2z.cloudfront.net/downloads/connect/latest/bin/ibm-aspera-connect_4.2.4.265_win64.msi", "C:\Users\Administrator\Desktop\AsperaConnectInstaller.msi");
+               
+              $FFDloadTask.Wait()
               Start-Process -filepath "C:\Users\Administrator\Desktop\firefox_installer.exe" -argumentlist "-MS" -wait;
-              Invoke-WebRequest -Uri "https://d3gcli72yxqn2z.cloudfront.net/downloads/connect/latest/bin/ibm-aspera-connect_4.2.4.265_win64.msi" -OutFile "C:\Users\Administrator\Desktop\AsperaConnectInstaller.msi";
+              
               New-Item -ItemType Directory -Path "C:\Users\Administrator\Desktop\data\" | Out-Null
               cd "C:\Users\Administrator\Desktop\data";
-              Invoke-Command -ScriptBlock {for ($i = 1; $i -le 200; $i++) {
+              Invoke-Command -ScriptBlock {
+                for ($i = 1; $i -le 200; $i++) {
                   $key = [string]::Format("{0:00000}.jpg", $i)
                   aws s3 cp "s3://aft-vbi-pds/bin-images/$key" "C:\Users\Administrator\Desktop\data\$key"
-              }}
+                }
+              }
             </powershell> 
       SecurityGroups:
       - !Ref EC2InstanceSecurityGroup
